Update to OES 4.0, runs under php 8.0

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -7,6 +7,15 @@
 	</head>
 
 	<body style="width: 700px; margin-left: 50px;">
+		<h1>OES 4 Changes</h1>
+		<h2>Version 4.0 (2021-11-22)</h2>
+		<ul>
+			<li>2021-11-22 Replace __autoload() with  spl_autoload_register(), function no longer included in php8.x .<li>
+			<li>2021-11-22 Replace function spit() with preg_split() 4 places in 2 files, no longer included in php8.x .<li>
+			<li>2021-11-22 Defined MAGIC_QUOTES_ACTIVE as false, no longer supported in php8.x .<li>
+			<li>2021-11-22 Defined MAGIC_QUOTES_ACTIVE as false, no longer supported in php8.x .<li>
+			<li>2021-11-22 Cosmetic change OES 3 to OES 4 in database install text.<li>
+		</ul>
 		<h1>OES 3 Changes</h1>
     <h2>Version 3.12.1 (2016-12-26)</h2>
     <ul>
